--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ Flask==2.0.1
 Flask-Compress==1.10.1
 future==0.18.2
 greenlet==1.1.2
+gunicorn==20.1.0
 h11==0.12.0
 http-client==0.1.22
 idna==2.10
@@ -65,7 +66,6 @@ neo4j==4.3.1
 neotime==1.7.4
 nest-asyncio==1.5.1
 networkx==2.5.1
-nltk==3.6.3
 notebook==6.4.0
 numpy==1.20.3
 outcome==1.1.0
